--- a/demo/INSTALL
+++ b/demo/INSTALL
@@ -9,7 +9,7 @@ And that's all. You now have a fully functioning Yolk application in the exe/
 directory. Be sure to copy the config.ini.dist file from extras/ to the demo
 exe/configuration/ directory and adjust both the config files to match your
 setup. You can start the Yolk demo with the --yolk-config-file option and have
-Yolk look for the configuration file on whatever path you've set.
+Yolk look for the configuration file in the given location.
 
 You can build a debug version of the demo with:
 
