--- a/INSTALL
+++ b/INSTALL
@@ -7,6 +7,9 @@ Building and installing Yolk is as simple as:
     $ make
     $ make install
 
+If you have a multicore system you can prepend make with PROCESSORS=n to speed
+things up.
+
 You can remove Yolk from your system by doing:
 
     $ make distclean
