--- a/demo/INSTALL
+++ b/demo/INSTALL
@@ -5,6 +5,9 @@ Building the Yolk demo is as simple as:
 
     $ make
 
+If you have a multicore system you can prepend make with PROCESSORS=n to speed
+things up.
+
 And that's all. You now have a fully functioning Yolk application in the exe/
 directory. Be sure to copy the config.ini.dist file from extras/ to the demo
 exe/configuration/ directory and adjust both the config files to match your
